# Dart-Chess

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/chess_ui/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/game/: chess_engine.dart  chess_ffi.dart  game_state.dart  test_ffi.dart
lib/ui/: board_background.dart  board_builder.dart  board_pieces.dart  board_touch.dart
linux/: CMakeLists.txt  my_application.cc
macos/: libchess_bridge.dylib
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
macos/Scripts/: build_native.sh
native/: CMakeLists.txt
native/bridge/: chess_bridge.cpp  chess_bridge.h  chess_bridge_test.cpp
native/include/: board.h  engine.h  utils.h
native/src/: board.cpp  board_test.cc  engine.cpp  engine_test.cc  main.cpp  utils.cpp
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
